Implemented workout plan management and show latest workout in ExerciseLogs Entry form